--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
       <div class="flex items-center space-x-3">
-        <img src="logo.png" alt="InnerSpark Logo" class="w-10 h-10 rounded-full">
+      <img src="logo.webp" alt="InnerSpark Studio Logo" class="w-10 h-10 rounded-full" />
         <h1 class="text-xl font-bold text-purple-700">InnerSpark Studio</h1>
       </div>
       <nav class="hidden md:flex space-x-6 text-sm font-medium">
