--- a/index.html
+++ b/index.html
@@ -66,23 +66,33 @@
   </section>
 
   <!-- Programs Section -->
-  <section id="programs" class="py-20 px-6 max-w-5xl mx-auto bg-[var(--light-yellow)]">
-    <h2 class="text-4xl font-bold text-center mb-12">Our Programs</h2>
-    <div class="grid gap-10 md:grid-cols-3">
-      <div class="bg-white rounded-xl shadow-lg p-8">
-        <h3 class="text-2xl font-semibold mb-3">Storytelling Adventures</h3>
-        <p>Interactive tales that spark imagination and build literacy with heart.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg p-8">
-        <h3 class="text-2xl font-semibold mb-3">Creative Workshops</h3>
-        <p>Hands-on sessions exploring art, play, music, and emotional expression.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg p-8">
-        <h3 class="text-2xl font-semibold mb-3">Mindful Learning</h3>
-        <p>Gentle practices that support focus, empathy, and inner growth.</p>
-      </div>
+ <section id="programs" class="py-20 px-6 max-w-5xl mx-auto bg-[var(--light-yellow)]">
+  <h2 class="text-4xl font-bold text-center mb-12">Our Programs</h2>
+  <div class="grid gap-10 md:grid-cols-3">
+    <div class="bg-white rounded-xl shadow-lg p-8">
+      <h3 class="text-2xl font-semibold mb-3">Guidebooks for Educators</h3>
+      <p>Evidence-based resources grounded in the science of reading and neuroscience to empower teachers.</p>
     </div>
-  </section>
+    <div class="bg-white rounded-xl shadow-lg p-8">
+      <h3 class="text-2xl font-semibold mb-3">Magical Stories for Children</h3>
+      <p>Engaging stories designed to ignite creativity while supporting early literacy development.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-8">
+      <h3 class="text-2xl font-semibold mb-3">Interactive Flashcards & Activities</h3>
+      <p>Phonics, vocabulary, and comprehension tools for hands-on learning and fun.</p>
+    </div>
+  </div>
+  <div class="grid gap-10 md:grid-cols-2 mt-12">
+    <div class="bg-white rounded-xl shadow-lg p-8">
+      <h3 class="text-2xl font-semibold mb-3">Workshops & Webinars</h3>
+      <p>Live and recorded sessions to guide educators and parents in neuroscience-backed literacy teaching methods.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-8">
+      <h3 class="text-2xl font-semibold mb-3">School Collaborations & Events</h3>
+      <p>Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
+    </div>
+  </div>
+</section>
 
   <!-- Placeholder Sections (To Fill Later) -->
   <section id="shop" class="py-20 text-center bg-[var(--light-purple)]">
