--- a/index.html
+++ b/index.html
@@ -18,28 +18,6 @@
       color: #333;
       scroll-behavior: smooth;
     }
-
-    /* Sparkle animation */
-    @keyframes sparkle {
-      0%, 100% { opacity: 0.2; transform: translateY(0) scale(1); }
-      50% { opacity: 1; transform: translateY(-5px) scale(1.1); }
-    }
-    .sparkle {
-      position: relative;
-      animation: sparkle 3s infinite ease-in-out;
-    }
-    .sparkle::before {
-      content: '✨';
-      position: absolute;
-      top: -12px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.2em;
-      opacity: 0.6;
-      animation: sparkle 3s infinite ease-in-out;
-      pointer-events: none;
-    }
-
     /* Fade-in scroll */
     .fade-in {
       opacity: 0;
@@ -156,35 +134,37 @@
       Join us on this magical journey of learning and dreaming together!
     </p>
   </section>
-
   <!-- Programs Section -->
-  <section id="programs" class="py-20 px-6 max-w-5xl mx-auto bg-[var(--light-yellow)] fade-in">
-    <h2 class="text-4xl font-bold text-center mb-12 sparkle">Our Programs</h2>
-    <div class="grid gap-10 md:grid-cols-3">
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-3">Guidebooks for Educators</h3>
-        <p>Evidence-based resources grounded in the science of reading and neuroscience to empower teachers.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-3">Magical Stories for Children</h3>
-        <p>Engaging stories designed to ignite creativity while supporting early literacy development.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-3">Interactive Flashcards & Activities</h3>
-        <p>Phonics, vocabulary, and comprehension tools for hands-on learning and fun.</p>
-      </div>
+  <section id="programs" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-yellow)]">
+  <h2 class="text-4xl font-bold text-center mb-12 sparkle">Our Programs</h2>
+  <div class="flex flex-wrap justify-center gap-8">
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
+      <div class="mb-4 text-purple-600 text-4xl">📚</div>
+      <h3 class="text-2xl font-semibold mb-3">Guidebooks for Educators</h3>
+      <p>Evidence-based resources grounded in the science of reading and neuroscience to empower teachers.</p>
     </div>
-    <div class="grid gap-10 md:grid-cols-2 mt-12">
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-3">Workshops & Webinars</h3>
-        <p>Live and recorded sessions to guide educators and parents in neuroscience-backed literacy teaching methods.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-3">School Collaborations & Events</h3>
-        <p>Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
-      </div>
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
+      <div class="mb-4 text-purple-600 text-4xl">🧙‍♂️</div>
+      <h3 class="text-2xl font-semibold mb-3">Magical Stories for Children</h3>
+      <p>Engaging stories designed to ignite creativity while supporting early literacy development.</p>
     </div>
-  </section>
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
+      <div class="mb-4 text-purple-600 text-4xl">🎨</div>
+      <h3 class="text-2xl font-semibold mb-3">Interactive Flashcards & Activities</h3>
+      <p>Phonics, vocabulary, and comprehension tools for hands-on learning and fun.</p>
+    </div>
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
+      <div class="mb-4 text-purple-600 text-4xl">🎤</div>
+      <h3 class="text-2xl font-semibold mb-3">Workshops & Webinars</h3>
+      <p>Live and recorded sessions to guide educators and parents in neuroscience-backed literacy teaching methods.</p>
+    </div>
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
+      <div class="mb-4 text-purple-600 text-4xl">🏫</div>
+      <h3 class="text-2xl font-semibold mb-3">School Collaborations & Events</h3>
+      <p>Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
+    </div>
+  </div>
+</section>
 
   <!-- Books Section with Levels -->
   <section id="books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] fade-in">
