--- a/index.html
+++ b/index.html
@@ -221,10 +221,38 @@
     <p class="text-lg">Upcoming online workshops and special events — stay tuned!</p>
   </section>
 
-  <section id="hiring" class="py-20 text-center bg-[var(--light-purple)] fade-in">
-    <h2 class="text-3xl font-bold mb-4 sparkle">We're Hiring</h2>
-    <p class="text-lg">Passionate about education? Join our growing dream team.</p>
-  </section>
+<section id="hiring" class="py-20 px-6 max-w-5xl mx-auto bg-[var(--light-purple)] text-gray-900 fade-in">
+  <h2 class="text-4xl font-bold mb-8 sparkle text-center">We're Hiring</h2>
+  <p class="text-lg max-w-3xl mx-auto mb-10 text-center">
+    Passionate about education and creativity? Join our growing team and help shape the future of learning.
+  </p>
+  <div class="space-y-8 max-w-4xl mx-auto">
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Educational Content Developer</h3>
+      <p>Create evidence-based guidebooks and lesson plans grounded in neuroscience and literacy science.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Children’s Story Writer & Illustrator</h3>
+      <p>Craft magical stories and captivating illustrations to engage young readers.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Workshop Facilitator / Trainer</h3>
+      <p>Lead interactive workshops and webinars for teachers and parents based on neuroscience-backed methods.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Community & School Partnership Coordinator</h3>
+      <p>Build partnerships with schools and community organizations to deliver literacy-focused events.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Marketing & Communications Specialist</h3>
+      <p>Help spread our mission through engaging content, social media, and event promotion.</p>
+    </div>
+    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
+      <h3 class="text-2xl font-semibold mb-2">Web & Multimedia Designer</h3>
+      <p>Design and maintain our website and digital media to create engaging learning experiences.</p>
+    </div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-purple)] text-gray-900 fade-in">
