--- a/index.html
+++ b/index.html
@@ -252,9 +252,22 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-600">
-    &copy; 2025 InnerSpark Studio. All rights reserved.
-  </footer>
+<footer class="bg-gray-100 py-6 text-center text-sm text-gray-600">
+  <!-- Social Media Links -->
+  <div class="flex justify-center space-x-6 mb-4">
+    <a href="https://www.facebook.com/share/16scVrvyor/" target="_blank" aria-label="Facebook" class="hover:opacity-80 transition">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="w-6 h-6">
+    </a>
+    <a href="https://www.instagram.com/inner_sparkstudio?igsh=MTQzNm1uaGk4bW5idQ==" target="_blank" aria-label="Instagram" class="hover:opacity-80 transition">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="w-6 h-6">
+    </a>
+    <a href="https://www.linkedin.com/company/innersparkstudio/" target="_blank" aria-label="LinkedIn" class="hover:opacity-80 transition">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" class="w-6 h-6">
+    </a>
+  </div>
+  
+  &copy; 2025 InnerSpark Studio. All rights reserved.
+</footer>
 
 <script>
   // Scroll fade-in logic
