--- a/index.html
+++ b/index.html
@@ -166,6 +166,40 @@
   </div>
 </section>
 
+  <section id="shop" class="py-20 px-6 max-w-6xl mx-auto bg-white">
+  <h2 class="text-4xl font-bold text-center mb-12">Explore Our Books</h2>
+  <div class="grid gap-8 md:grid-cols-3">
+    
+    <!-- Kindergarten -->
+    <div class="bg-[var(--light-yellow)] rounded-xl p-6 shadow-lg text-center">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Kindergarten</h3>
+      <p class="mb-4 text-gray-700">Playful stories and phonics-rich adventures designed to delight little learners.</p>
+      <button class="bg-yellow-400 text-white px-4 py-2 rounded-full font-semibold hover:bg-yellow-500 transition">
+        Coming Soon
+      </button>
+    </div>
+
+    <!-- Lower Primary -->
+    <div class="bg-[var(--light-purple)] rounded-xl p-6 shadow-lg text-center">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Lower Primary</h3>
+      <p class="mb-4 text-gray-700">Magical tales and early chapter books that spark imagination and grow reading skills.</p>
+      <button class="bg-purple-500 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-600 transition">
+        Coming Soon
+      </button>
+    </div>
+
+    <!-- Upper Primary -->
+    <div class="bg-[var(--light-beige)] rounded-xl p-6 shadow-lg text-center">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Upper Primary</h3>
+      <p class="mb-4 text-gray-700">Deeper stories, vocabulary builders, and creative challenges for curious minds.</p>
+      <button class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition">
+        Coming Soon
+      </button>
+    </div>
+
+  </div>
+</section>
+
   <!-- Books Section with Levels -->
   <section id="books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] fade-in">
     <h2 class="text-4xl font-bold text-center mb-12 sparkle">Books by Level</h2>
