--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a href="#books">Books</a>
         <a href="#webinars">Webinars</a>
         <a href="#gallery">Gallery</a>
-        <a href="#hiring">Hiring</a>
+        <a href="hiring.html" class="hover:text-purple-600">Join Our Team</a>
         <a href="#contact">Contact</a>
       </nav>
       <div class="hidden md:block search-container">
@@ -193,44 +193,12 @@
       <h3 class="text-2xl font-semibold text-gray-800 mb-3">Upper Primary</h3>
       <p class="mb-4 text-gray-700">Deeper stories, vocabulary builders, and creative challenges for curious minds.</p>
       <button class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition">
+        
         Coming Soon
       </button>
     </div>
-
   </div>
 </section>
-
-  <!-- Books Section with Levels -->
-  <section id="books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] fade-in">
-    <h2 class="text-4xl font-bold text-center mb-12 sparkle">Books by Level</h2>
-    <div class="grid gap-10 md:grid-cols-3">
-
-      <!-- Kindergarten -->
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-4 text-purple-700">Kindergarten </h3>
-        <p class="mb-6">Early phonics, letter recognition, and playful stories to build foundational skills.</p>
-        <ul class="list-disc list-inside space-y-2 text-gray-700">
-        </ul>
-      </div>
-
-      <!-- Lower Primary -->
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-4 text-purple-700">Lower Primary </h3>
-        <p class="mb-6">Blending, decoding, and early reading fluency with creative stories.</p>
-        <ul class="list-disc list-inside space-y-2 text-gray-700">
-        </ul>
-      </div>
-
-      <!-- Upper Primary -->
-      <div class="bg-white rounded-xl shadow-lg p-8 button-press hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-4 text-purple-700">Upper Primary </h3>
-        <p class="mb-6">Vocabulary building, comprehension, and creative writing inspiration.</p>
-        <ul class="list-disc list-inside space-y-2 text-gray-700">
-        </ul>
-      </div>
-      
-    </div>
-  </section>
 
   <!-- Placeholder Sections (To Fill Later) -->
   <section id="gallery" class="py-20 text-center bg-[var(--light-beige)] fade-in">
@@ -242,40 +210,7 @@
     <h2 class="text-3xl font-bold mb-4 sparkle">Webinars</h2>
     <p class="text-lg">Upcoming online workshops and special events — stay tuned!</p>
   </section>
-
-<section id="hiring" class="py-20 px-6 max-w-5xl mx-auto bg-[var(--light-purple)] text-gray-900 fade-in">
-  <h2 class="text-4xl font-bold mb-8 sparkle text-center">We're Hiring</h2>
-  <p class="text-lg max-w-3xl mx-auto mb-10 text-center">
-    Passionate about education and creativity? Join our growing team and help shape the future of learning.
-  </p>
-  <div class="space-y-8 max-w-4xl mx-auto">
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Educational Content Developer</h3>
-      <p>Create evidence-based guidebooks and lesson plans grounded in neuroscience and literacy science.</p>
-    </div>
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Children’s Story Writer & Illustrator</h3>
-      <p>Craft magical stories and captivating illustrations to engage young readers.</p>
-    </div>
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Workshop Facilitator / Trainer</h3>
-      <p>Lead interactive workshops and webinars for teachers and parents based on neuroscience-backed methods.</p>
-    </div>
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Community & School Partnership Coordinator</h3>
-      <p>Build partnerships with schools and community organizations to deliver literacy-focused events.</p>
-    </div>
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Marketing & Communications Specialist</h3>
-      <p>Help spread our mission through engaging content, social media, and event promotion.</p>
-    </div>
-    <div class="bg-white rounded-xl shadow-lg p-6 hover:shadow-xl transition cursor-pointer">
-      <h3 class="text-2xl font-semibold mb-2">Web & Multimedia Designer</h3>
-      <p>Design and maintain our website and digital media to create engaging learning experiences.</p>
-    </div>
-  </div>
-</section>
-
+  
   <!-- Contact Section -->
   <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-purple)] text-gray-900 fade-in">
     <h2 class="text-4xl font-bold mb-8 sparkle">Contact Us</h2>
