--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <nav class="hidden md:flex space-x-6 text-sm font-medium">
         <a href="#about">Welcome</a>
         <a href="#programs">Programs</a>
-        <a href="#explore-books" class="hover:text-purple-600">Explore Books</a>
+        <a href="#Explore Our Books" class="hover:text-purple-600">Explore Our Books</a>
         <a href="#webinars">Webinars</a>
         <a href="#gallery">Gallery</a>
         <a href="hiring.html" class="hover:text-purple-600">Join Our Team</a>
@@ -106,7 +106,7 @@
     <nav id="mobile-menu" class="hidden flex-col space-y-3 px-6 pb-4 md:hidden bg-white border-t border-gray-200">
       <a href="#about" class="block py-1">Welcome</a>
       <a href="#programs" class="block py-1">Programs</a>
-      <a href="#explore-books" class="hover:text-purple-600">Explore Books</a>
+      <a href="#Explore Our Books" class="hover:text-purple-600">Explore Our Books</a>
       <a href="#webinars" class="block py-1">Webinars</a>
       <a href="#gallery" class="block py-1">Gallery</a>
       <a href="#hiring" class="block py-1">Hiring</a>
