--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@
     }
   }
 </script>
+  <script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  toggleBtn?.addEventListener('click', () => {
+    mobileMenu?.classList.toggle('hidden');
+  });
+</script>
+
 
 </body>
 </html>
