--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </div>
 </section>
 
-  <section id="shop" class="py-20 px-6 max-w-6xl mx-auto bg-white">
+  <section id="Explore Our Books" class="py-20 px-6 max-w-6xl mx-auto bg-white">
   <h2 class="text-4xl font-bold text-center mb-12">Explore Our Books</h2>
   <div class="grid gap-8 md:grid-cols-3">
     
