--- a/index.html
+++ b/index.html
@@ -199,25 +199,25 @@
   
   <div class="flex flex-wrap justify-center gap-8">
     <!-- Kindergarten -->
-    <div class="bg-[var(--light-yellow)] rounded-xl p-6 shadow-lg text-center flex flex-col justify-between h-64 w-64">
-      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Kindergarten</h3>
-      <button class="bg-yellow-400 text-white px-4 py-2 rounded-full font-semibold hover:bg-yellow-500 transition mt-auto">
+    <div class="bg-[var(--light-yellow)] rounded-xl p-6 shadow-lg text-center flex flex-col gap-4 w-64">
+      <h3 class="text-2xl font-semibold text-gray-800">Kindergarten</h3>
+      <button class="bg-yellow-400 text-white px-4 py-2 rounded-full font-semibold hover:bg-yellow-500 transition">
         Coming Soon
       </button>
     </div>
 
     <!-- Lower Primary -->
-    <div class="bg-[var(--light-purple)] rounded-xl p-6 shadow-lg text-center flex flex-col justify-between h-64 w-64">
-      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Lower Primary</h3>
-      <button class="bg-purple-500 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-600 transition mt-auto">
+    <div class="bg-[var(--light-purple)] rounded-xl p-6 shadow-lg text-center flex flex-col gap-4 w-64">
+      <h3 class="text-2xl font-semibold text-gray-800">Lower Primary</h3>
+      <button class="bg-purple-500 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-600 transition">
         Coming Soon
       </button>
     </div>
 
     <!-- Upper Primary -->
-    <div class="bg-[var(--light-beige)] rounded-xl p-6 shadow-lg text-center flex flex-col justify-between h-64 w-64">
-      <h3 class="text-2xl font-semibold text-gray-800 mb-3">Upper Primary</h3>
-      <button class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition mt-auto">
+    <div class="bg-[var(--light-beige)] rounded-xl p-6 shadow-lg text-center flex flex-col gap-4 w-64">
+      <h3 class="text-2xl font-semibold text-gray-800">Upper Primary</h3>
+      <button class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition">
         Coming Soon
       </button>
     </div>
@@ -299,7 +299,6 @@
     mobileMenu?.classList.toggle('hidden');
   });
 </script>
-
-
+  
 </body>
 </html>
