--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <a href="#about">Welcome</a>
         <a href="#programs">Programs</a>
         <a href="#Explore Our Books" class="hover:text-purple-600">Explore Our Books</a>
-        <a href="#webinars">Webinars</a>
+        <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
         <a href="#gallery">Gallery</a>
         <a href="hiring.html" class="hover:text-purple-600">Join Our Team</a>
         <a href="#contact">Contact</a>
@@ -135,7 +135,7 @@
       <a href="#about" class="block py-1">Welcome</a>
       <a href="#programs" class="block py-1">Programs</a>
       <a href="#Explore Our Books" class="hover:text-purple-600">Explore Our Books</a>
-      <a href="#webinars" class="block py-1">Webinars</a>
+      <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
       <a href="#gallery" class="block py-1">Gallery</a>
       <a href="#hiring" class="block py-1">Hiring</a>
       <a href="#contact" class="block py-1">Contact</a>
