--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="hidden md:flex space-x-6 text-gray-700 font-semibold">
       <a href="#home" class="hover:text-purple-600 transition">Home</a>
       <a href="#about" class="hover:text-purple-600 transition">About</a>
-      <a href="#explore-books" class="hover:text-purple-600 transition">Explore Our Books</a>
+      <a href="#explore our books" class="hover:text-purple-600 transition">Explore Our Books</a>
       <a href="#programs" class="hover:text-purple-600 transition">Programs</a>
       <a href="#workshops" class="hover:text-purple-600 transition">Workshops</a>
       <a href="#gallery" class="hover:text-purple-600 transition">Gallery</a>
@@ -39,7 +39,7 @@
   <div class="md:hidden hidden px-4 pb-4 space-y-2" id="mobile-menu">
     <a href="#home" class="block hover:text-purple-600">Home</a>
     <a href="#about" class="block hover:text-purple-600">About</a>
-    <a href="#explore-books" class="block hover:text-purple-600">Explore Our Books</a>
+    <a href="#explore our books" class="block hover:text-purple-600">Explore Our Books</a>
     <a href="#programs" class="block hover:text-purple-600">Programs</a>
     <a href="#workshops" class="block hover:text-purple-600">Workshops</a>
     <a href="#gallery" class="block hover:text-purple-600">Gallery</a>
