--- a/index.html
+++ b/index.html
@@ -162,34 +162,41 @@
       Join us on this magical journey of learning and dreaming together!
     </p>
   </section>
+  
   <!-- Programs Section -->
-  <section id="programs" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-yellow)]">
-  <h2 class="text-4xl font-bold text-center mb-12 sparkle">Our Programs</h2>
-  <div class="flex flex-wrap justify-center gap-8">
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
-      <div class="mb-4 text-purple-600 text-4xl">📚</div>
-      <h3 class="text-2xl font-semibold mb-3">Guidebooks for Educators</h3>
-      <p>Evidence-based resources grounded in the science of reading and neuroscience to empower teachers.</p>
+<section id="programs" class="py-20 px-6 max-w-7xl mx-auto bg-gradient-to-br from-yellow-100 via-pink-50 to-purple-100">
+  <h2 class="text-4xl font-bold text-center mb-16 text-purple-700 sparkle">✨ Our Magical Programs ✨</h2>
+  
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 justify-items-center">
+    <!-- Program Card -->
+    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-purple-400 hover:scale-105 transition duration-300">
+      <div class="text-4xl mb-4 text-purple-500">📚</div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Guidebooks for Educators</h3>
+      <p class="text-gray-600">Evidence-based resources grounded in the science of reading and neuroscience to empower teachers.</p>
     </div>
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
-      <div class="mb-4 text-purple-600 text-4xl">🧙‍♂️</div>
-      <h3 class="text-2xl font-semibold mb-3">Magical Stories for Children</h3>
-      <p>Engaging stories designed to ignite creativity while supporting early literacy development.</p>
+
+    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-pink-400 hover:scale-105 transition duration-300">
+      <div class="text-4xl mb-4 text-pink-500">🧙‍♂️</div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Magical Stories for Children</h3>
+      <p class="text-gray-600">Engaging stories designed to ignite creativity while supporting early literacy development.</p>
     </div>
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
-      <div class="mb-4 text-purple-600 text-4xl">🎨</div>
-      <h3 class="text-2xl font-semibold mb-3">Interactive Flashcards & Activities</h3>
-      <p>Phonics, vocabulary, and comprehension tools for hands-on learning and fun.</p>
+
+    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-yellow-400 hover:scale-105 transition duration-300">
+      <div class="text-4xl mb-4 text-yellow-500">🎨</div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Interactive Flashcards & Activities</h3>
+      <p class="text-gray-600">Phonics, vocabulary, and comprehension tools for hands-on learning and fun.</p>
     </div>
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
-      <div class="mb-4 text-purple-600 text-4xl">🎤</div>
-      <h3 class="text-2xl font-semibold mb-3">Workshops & Webinars</h3>
-      <p>Live and recorded sessions to guide educators and parents in neuroscience-backed literacy teaching methods.</p>
+
+    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-indigo-400 hover:scale-105 transition duration-300">
+      <div class="text-4xl mb-4 text-indigo-500">🎤</div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Workshops & Webinars</h3>
+      <p class="text-gray-600">Live and recorded sessions to guide educators and parents in neuroscience-backed literacy methods.</p>
     </div>
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 0;">
-      <div class="mb-4 text-purple-600 text-4xl">🏫</div>
-      <h3 class="text-2xl font-semibold mb-3">School Collaborations & Events</h3>
-      <p>Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
+
+    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-green-400 hover:scale-105 transition duration-300">
+      <div class="text-4xl mb-4 text-green-500">🏫</div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">School Collaborations & Events</h3>
+      <p class="text-gray-600">Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
     </div>
   </div>
 </section>
